config: Add cluster info

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,13 @@
 distributedsorting {
+    cluster-info {
+        worker-nodes = 20
+        node-info {
+            memory = "24 GB"
+            disk-capacity = "500 GB"
+            cpu-cores = 4
+        }
+    }
+
     record-info {
         record-length = 100
         key-length = 10
