config: Add sampling config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,4 +12,11 @@ distributedsorting {
         record-length = 100
         key-length = 10
     }
+
+    sampling-control {
+        max-memory-usage-ratio = 0.3
+        bytes-per-machine = "0.5 MB"
+        max-bytes-per-machine-designed = "10 MB"
+        max-bytes-per-machine-absolute = "32 MB"
+    }
 }
