fix: Correct config bytes unit

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,8 +2,8 @@ distributedsorting {
     cluster-info {
         worker-nodes = 20
         node-info {
-            memory = "24 GB"
-            disk-capacity = "500 GB"
+            memory = 24 GiB
+            disk-capacity = 500 GB
             cpu-cores = 4
         }
     }
@@ -15,8 +15,8 @@ distributedsorting {
 
     sampling-control {
         max-memory-usage-ratio = 0.3
-        bytes-per-machine = "0.5 MB"
-        max-bytes-per-machine-designed = "10 MB"
-        max-bytes-per-machine-absolute = "32 MB"
+        bytes-per-machine = 0.5 MiB
+        max-bytes-per-machine-designed = 10 MiB
+        max-bytes-per-machine-absolute = 32 MiB
     }
 }
