config: Add config for external-sort

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,4 +9,8 @@ distributedsorting {
         # byte단위
         buffer-size = 8 KiB
     }
+
+    external-sort {
+        max-memory-usage-ratio = 0.5
+    }
 }
