test: import RecordIO code from feat/recordio; confirm failures due to unimplemented transport

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,4 +19,8 @@ distributedsorting {
         max-bytes-per-machine-designed = "10 MB"
         max-bytes-per-machine-absolute = "32 MB"
     }
+    io {        
+        # byte단위
+        buffer-size = 8 KiB
+    }
 }
