config: Add external-sort config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,5 +27,8 @@ distributedsorting {
 
     external-sort {
         max-memory-usage-ratio = 0.5
+        chunk-size = 32 MiB
+        output-prefix = "partition"
+        output-start-postfix = 1
     }
 }
