feat: Add SimpleSampling

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,8 @@ distributedsorting {
         bytes-per-machine = 0.5 MiB
         max-bytes-per-machine-designed = 10 MiB
         max-bytes-per-machine-absolute = 32 MiB
+        use-simple-sampling = true
+        simple-sampling-records = 10000
     }
     io {        
         # byte단위
