feat: Add file open safety logic in ExternalSorter

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,6 +32,8 @@ distributedsorting {
         chunk-size = 32 MiB
         output-prefix = "partition"
         output-start-postfix = 1
+        basic-max-merge-files = 500
+        max-files-ratio = 0.8
     }
 
     internal-sort {
