feat: Complement file open safety logic in ExternalSorter

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,6 +33,7 @@ distributedsorting {
         output-prefix = "partition"
         output-start-postfix = 1
         basic-max-merge-files = 500
+        max-files-absolute-limit = 1024
         max-files-ratio = 0.8
     }
 
