config: set logging enable-console to true

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,7 +16,7 @@ distributedsorting {
 
     logging {
         # 로그 출력 설정
-        enable-console = false          # 콘솔(stdout)에 로그 출력 여부
+        enable-console = true          # 콘솔(stdout)에 로그 출력 여부
         enable-file = false            # 파일에 로그 출력 여부
         file-path = "logs/application.log"  # 로그 파일 경로
         level = "INFO"                  # 로그 레벨: TRACE, DEBUG, INFO, WARN, ERROR
